wire the corpse functionality together and if you suffer injuries due to my code I am not liable but don't worry I'll fix the code soon I know it's ugly but at least in theory it works in practice I haven't tested it yet